// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectEnvironments render active renders empty message 1`] = `
.glamor-4 {
  font-size: 14px;
  box-shadow: inset 0 -1px 0 #E2DBE8;
  margin: -20px 0 30px;
}

.glamor-2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.glamor-0 {
  font-size: 20px;
  font-weight: bold;
  margin: 20px 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.glamor-16 {
  background: #fff;
  border-radius: 4px;
  border: 1px solid #D1CAD8;
  box-shadow: 0 2px 0 rgba(37,11,54,0.04);
  margin-bottom: 32px;
  position: relative;
}

.glamor-10 {
  color: #645574;
  font-size: 13px;
  font-weight: 600;
  text-transform: uppercase;
  border-bottom: 1px solid #D1CAD8;
  border-radius: 4px 4px 0 0;
  background: #FAF9FB;
  line-height: 1;
  padding: 15px 20px;
}

.glamor-7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  color: #645574;
  font-size: 13px;
  font-weight: 600;
  text-transform: uppercase;
  border-bottom: 1px solid #D1CAD8;
  border-radius: 4px 4px 0 0;
  background: #FAF9FB;
  line-height: 1;
  padding: 15px 20px;
}

.glamor-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  color: #4A3E56;
  padding: 24px;
  font-size: 16px;
  font-weight: bold;
}

<ProjectEnvironments
  params={
    Object {
      "orgId": "org-slug",
      "projectId": "project-slug",
    }
  }
  route={
    Object {
      "path": "environments/",
    }
  }
  routes={Array []}
>
  <div>
    <SettingsPageHeading
      tabs={
        <ul
          className="nav nav-tabs"
          style={
            Object {
              "borderBottom": "1px solid #ddd",
            }
          }
        >
          <ListLink
            activeClassName="active"
            index={true}
            isActive={[Function]}
            to="/org-slug/project-slug/settings/environments/"
          >
            Environments
          </ListLink>
          <ListLink
            activeClassName="active"
            index={true}
            isActive={[Function]}
            to="/org-slug/project-slug/settings/environments/hidden/"
          >
            Hidden
          </ListLink>
        </ul>
      }
      title="Manage Environments"
    >
      <Wrapper
        tabs={
          <ul
            className="nav nav-tabs"
            style={
              Object {
                "borderBottom": "1px solid #ddd",
              }
            }
          >
            <ListLink
              activeClassName="active"
              index={true}
              isActive={[Function]}
              to="/org-slug/project-slug/settings/environments/"
            >
              Environments
            </ListLink>
            <ListLink
              activeClassName="active"
              index={true}
              isActive={[Function]}
              to="/org-slug/project-slug/settings/environments/hidden/"
            >
              Hidden
            </ListLink>
          </ul>
        }
      >
        <div
          className="glamor-4 glamor-5"
        >
          <Flex
            align="center"
          >
            <Base
              align="center"
              className="glamor-2"
            >
              <div
                className="glamor-2"
                is={null}
              >
                <Title>
                  <div
                    className="glamor-0 glamor-1"
                  >
                    Manage Environments
                  </div>
                </Title>
              </div>
            </Base>
          </Flex>
          <div>
            <ul
              className="nav nav-tabs"
              style={
                Object {
                  "borderBottom": "1px solid #ddd",
                }
              }
            >
              <ListLink
                activeClassName="active"
                index={true}
                isActive={[Function]}
                to="/org-slug/project-slug/settings/environments/"
              >
                <li
                  className="active"
                >
                  <Link
                    onlyActiveOnIndex={true}
                    style={Object {}}
                    to="/org-slug/project-slug/settings/environments/"
                  >
                    <a
                      onClick={[Function]}
                      style={Object {}}
                    >
                      Environments
                    </a>
                  </Link>
                </li>
              </ListLink>
              <ListLink
                activeClassName="active"
                index={true}
                isActive={[Function]}
                to="/org-slug/project-slug/settings/environments/hidden/"
              >
                <li
                  className=""
                >
                  <Link
                    onlyActiveOnIndex={true}
                    style={Object {}}
                    to="/org-slug/project-slug/settings/environments/hidden/"
                  >
                    <a
                      onClick={[Function]}
                      style={Object {}}
                    >
                      Hidden
                    </a>
                  </Link>
                </li>
              </ListLink>
            </ul>
          </div>
        </div>
      </Wrapper>
    </SettingsPageHeading>
    <Panel>
      <StyledPanel>
        <div
          className="glamor-16 glamor-17"
        >
          <PanelHeader>
            <StyledPanelHeader>
              <Component
                className="glamor-10 glamor-6"
              >
                <Flex
                  align="center"
                  className="glamor-10 glamor-6"
                  justify="space-between"
                >
                  <Base
                    align="center"
                    className="glamor-6 glamor-7"
                    justify="space-between"
                  >
                    <div
                      className="glamor-6 glamor-7"
                      is={null}
                    >
                      Active Environments
                    </div>
                  </Base>
                </Flex>
              </Component>
            </StyledPanelHeader>
          </PanelHeader>
          <PanelBody
            direction="column"
            disablePadding={true}
            flex={false}
          >
            <div
              className=""
            >
              <EmptyMessage>
                <Wrapper>
                  <div
                    className="glamor-14 glamor-15"
                  >
                    <div
                      className="ref-message"
                    >
                      You don't have any environments yet.
                    </div>
                  </div>
                </Wrapper>
              </EmptyMessage>
            </div>
          </PanelBody>
        </div>
      </StyledPanel>
    </Panel>
  </div>
</ProjectEnvironments>
`;

exports[`ProjectEnvironments render active renders environment list 1`] = `
.glamor-4 {
  font-size: 14px;
  box-shadow: inset 0 -1px 0 #E2DBE8;
  margin: -20px 0 30px;
}

.glamor-2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.glamor-0 {
  font-size: 20px;
  font-weight: bold;
  margin: 20px 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.glamor-46 {
  background: #fff;
  border-radius: 4px;
  border: 1px solid #D1CAD8;
  box-shadow: 0 2px 0 rgba(37,11,54,0.04);
  margin-bottom: 32px;
  position: relative;
}

.glamor-10 {
  color: #645574;
  font-size: 13px;
  font-weight: 600;
  text-transform: uppercase;
  border-bottom: 1px solid #D1CAD8;
  border-radius: 4px 4px 0 0;
  background: #FAF9FB;
  line-height: 1;
  padding: 15px 20px;
}

.glamor-7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  color: #645574;
  font-size: 13px;
  font-weight: 600;
  text-transform: uppercase;
  border-bottom: 1px solid #D1CAD8;
  border-radius: 4px 4px 0 0;
  background: #FAF9FB;
  line-height: 1;
  padding: 15px 20px;
}

.glamor-24 {
  box-sizing: border-box;
  padding: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-bottom: 1px solid #E2DBE8;
}

.glamor-24:last-child {
  border: 0;
}

.glamor-14 {
  display: inline;
  padding: 0.4em 0.6em;
  font-size: 75%;
  font-weight: bold;
  line-height: 1;
  color: #fff;
  text-align: center;
  white-space: nowrap;
  vertical-align: baseline;
  border-radius: 0.25em;
  margin-left: 0.5em;
  text-transform: lowercase;
  background-color: #57be8c;
}

.glamor-20 {
  margin-left: 4px;
}

<ProjectEnvironments
  params={
    Object {
      "orgId": "org-slug",
      "projectId": "project-slug",
    }
  }
  route={
    Object {
      "path": "environments/",
    }
  }
  routes={Array []}
>
  <div>
    <SettingsPageHeading
      tabs={
        <ul
          className="nav nav-tabs"
          style={
            Object {
              "borderBottom": "1px solid #ddd",
            }
          }
        >
          <ListLink
            activeClassName="active"
            index={true}
            isActive={[Function]}
            to="/org-slug/project-slug/settings/environments/"
          >
            Environments
          </ListLink>
          <ListLink
            activeClassName="active"
            index={true}
            isActive={[Function]}
            to="/org-slug/project-slug/settings/environments/hidden/"
          >
            Hidden
          </ListLink>
        </ul>
      }
      title="Manage Environments"
    >
      <Wrapper
        tabs={
          <ul
            className="nav nav-tabs"
            style={
              Object {
                "borderBottom": "1px solid #ddd",
              }
            }
          >
            <ListLink
              activeClassName="active"
              index={true}
              isActive={[Function]}
              to="/org-slug/project-slug/settings/environments/"
            >
              Environments
            </ListLink>
            <ListLink
              activeClassName="active"
              index={true}
              isActive={[Function]}
              to="/org-slug/project-slug/settings/environments/hidden/"
            >
              Hidden
            </ListLink>
          </ul>
        }
      >
        <div
          className="glamor-4 glamor-5"
        >
          <Flex
            align="center"
          >
            <Base
              align="center"
              className="glamor-2"
            >
              <div
                className="glamor-2"
                is={null}
              >
                <Title>
                  <div
                    className="glamor-0 glamor-1"
                  >
                    Manage Environments
                  </div>
                </Title>
              </div>
            </Base>
          </Flex>
          <div>
            <ul
              className="nav nav-tabs"
              style={
                Object {
                  "borderBottom": "1px solid #ddd",
                }
              }
            >
              <ListLink
                activeClassName="active"
                index={true}
                isActive={[Function]}
                to="/org-slug/project-slug/settings/environments/"
              >
                <li
                  className="active"
                >
                  <Link
                    onlyActiveOnIndex={true}
                    style={Object {}}
                    to="/org-slug/project-slug/settings/environments/"
                  >
                    <a
                      onClick={[Function]}
                      style={Object {}}
                    >
                      Environments
                    </a>
                  </Link>
                </li>
              </ListLink>
              <ListLink
                activeClassName="active"
                index={true}
                isActive={[Function]}
                to="/org-slug/project-slug/settings/environments/hidden/"
              >
                <li
                  className=""
                >
                  <Link
                    onlyActiveOnIndex={true}
                    style={Object {}}
                    to="/org-slug/project-slug/settings/environments/hidden/"
                  >
                    <a
                      onClick={[Function]}
                      style={Object {}}
                    >
                      Hidden
                    </a>
                  </Link>
                </li>
              </ListLink>
            </ul>
          </div>
        </div>
      </Wrapper>
    </SettingsPageHeading>
    <Panel>
      <StyledPanel>
        <div
          className="glamor-46 glamor-47"
        >
          <PanelHeader>
            <StyledPanelHeader>
              <Component
                className="glamor-10 glamor-6"
              >
                <Flex
                  align="center"
                  className="glamor-10 glamor-6"
                  justify="space-between"
                >
                  <Base
                    align="center"
                    className="glamor-6 glamor-7"
                    justify="space-between"
                  >
                    <div
                      className="glamor-6 glamor-7"
                      is={null}
                    >
                      Active Environments
                    </div>
                  </Base>
                </Flex>
              </Component>
            </StyledPanelHeader>
          </PanelHeader>
          <PanelBody
            direction="column"
            disablePadding={true}
            flex={false}
          >
            <div
              className=""
            >
              <PanelItem
                align="center"
                justify="space-between"
                key="1"
                p={2}
              >
                <StyledPanelItem
                  align="center"
                  justify="space-between"
                  p={2}
                >
                  <Base
                    align="center"
                    className="glamor-24 glamor-25"
                    justify="space-between"
                    p={2}
                  >
                    <div
                      className="glamor-24 glamor-25"
                      is={null}
                    >
                      <Flex
                        align="center"
                      >
                        <Base
                          align="center"
                          className="glamor-2"
                        >
                          <div
                            className="glamor-2"
                            is={null}
                          >
                            Production
                             
                            <code>
                              production
                            </code>
                            <Tag
                              priority="success"
                            >
                              <TagTextStyled
                                priority="success"
                              >
                                <span
                                  className="glamor-14 glamor-15"
                                >
                                  Default
                                </span>
                              </TagTextStyled>
                            </Tag>
                          </div>
                        </Base>
                      </Flex>
                      <div>
                        <EnvironmentButton
                          onClick={[Function]}
                          size="xsmall"
                        >
                          <Button
                            className="glamor-20 glamor-21"
                            disabled={false}
                            onClick={[Function]}
                            size="xsmall"
                          >
                            <button
                              className="glamor-20 glamor-21 button button-default button-xs"
                              disabled={false}
                              onClick={[Function]}
                              role="button"
                            >
                              <Flex
                                align="center"
                                className="button-label"
                              >
                                <Base
                                  align="center"
                                  className="button-label glamor-2"
                                >
                                  <div
                                    className="button-label glamor-2"
                                    is={null}
                                  >
                                    Hide
                                  </div>
                                </Base>
                              </Flex>
                            </button>
                          </Button>
                        </EnvironmentButton>
                      </div>
                    </div>
                  </Base>
                </StyledPanelItem>
              </PanelItem>
              <PanelItem
                align="center"
                justify="space-between"
                key="2"
                p={2}
              >
                <StyledPanelItem
                  align="center"
                  justify="space-between"
                  p={2}
                >
                  <Base
                    align="center"
                    className="glamor-24 glamor-25"
                    justify="space-between"
                    p={2}
                  >
                    <div
                      className="glamor-24 glamor-25"
                      is={null}
                    >
                      <Flex
                        align="center"
                      >
                        <Base
                          align="center"
                          className="glamor-2"
                        >
                          <div
                            className="glamor-2"
                            is={null}
                          >
                            Staging
                             
                            <code>
                              staging
                            </code>
                          </div>
                        </Base>
                      </Flex>
                      <div>
                        <EnvironmentButton
                          onClick={[Function]}
                          size="xsmall"
                        >
                          <Button
                            className="glamor-20 glamor-21"
                            disabled={false}
                            onClick={[Function]}
                            size="xsmall"
                          >
                            <button
                              className="glamor-20 glamor-21 button button-default button-xs"
                              disabled={false}
                              onClick={[Function]}
                              role="button"
                            >
                              <Flex
                                align="center"
                                className="button-label"
                              >
                                <Base
                                  align="center"
                                  className="button-label glamor-2"
                                >
                                  <div
                                    className="button-label glamor-2"
                                    is={null}
                                  >
                                    Set as default
                                  </div>
                                </Base>
                              </Flex>
                            </button>
                          </Button>
                        </EnvironmentButton>
                        <EnvironmentButton
                          onClick={[Function]}
                          size="xsmall"
                        >
                          <Button
                            className="glamor-20 glamor-21"
                            disabled={false}
                            onClick={[Function]}
                            size="xsmall"
                          >
                            <button
                              className="glamor-20 glamor-21 button button-default button-xs"
                              disabled={false}
                              onClick={[Function]}
                              role="button"
                            >
                              <Flex
                                align="center"
                                className="button-label"
                              >
                                <Base
                                  align="center"
                                  className="button-label glamor-2"
                                >
                                  <div
                                    className="button-label glamor-2"
                                    is={null}
                                  >
                                    Hide
                                  </div>
                                </Base>
                              </Flex>
                            </button>
                          </Button>
                        </EnvironmentButton>
                      </div>
                    </div>
                  </Base>
                </StyledPanelItem>
              </PanelItem>
            </div>
          </PanelBody>
        </div>
      </StyledPanel>
    </Panel>
  </div>
</ProjectEnvironments>
`;

exports[`ProjectEnvironments render hidden renders empty message 1`] = `
.glamor-4 {
  font-size: 14px;
  box-shadow: inset 0 -1px 0 #E2DBE8;
  margin: -20px 0 30px;
}

.glamor-2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.glamor-0 {
  font-size: 20px;
  font-weight: bold;
  margin: 20px 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.glamor-16 {
  background: #fff;
  border-radius: 4px;
  border: 1px solid #D1CAD8;
  box-shadow: 0 2px 0 rgba(37,11,54,0.04);
  margin-bottom: 32px;
  position: relative;
}

.glamor-10 {
  color: #645574;
  font-size: 13px;
  font-weight: 600;
  text-transform: uppercase;
  border-bottom: 1px solid #D1CAD8;
  border-radius: 4px 4px 0 0;
  background: #FAF9FB;
  line-height: 1;
  padding: 15px 20px;
}

.glamor-7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  color: #645574;
  font-size: 13px;
  font-weight: 600;
  text-transform: uppercase;
  border-bottom: 1px solid #D1CAD8;
  border-radius: 4px 4px 0 0;
  background: #FAF9FB;
  line-height: 1;
  padding: 15px 20px;
}

.glamor-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  color: #4A3E56;
  padding: 24px;
  font-size: 16px;
  font-weight: bold;
}

<ProjectEnvironments
  params={
    Object {
      "orgId": "org-slug",
      "projectId": "project-slug",
    }
  }
  route={
    Object {
      "path": "environments/hidden/",
    }
  }
  routes={Array []}
>
  <div>
    <SettingsPageHeading
      tabs={
        <ul
          className="nav nav-tabs"
          style={
            Object {
              "borderBottom": "1px solid #ddd",
            }
          }
        >
          <ListLink
            activeClassName="active"
            index={true}
            isActive={[Function]}
            to="/org-slug/project-slug/settings/environments/"
          >
            Environments
          </ListLink>
          <ListLink
            activeClassName="active"
            index={true}
            isActive={[Function]}
            to="/org-slug/project-slug/settings/environments/hidden/"
          >
            Hidden
          </ListLink>
        </ul>
      }
      title="Manage Environments"
    >
      <Wrapper
        tabs={
          <ul
            className="nav nav-tabs"
            style={
              Object {
                "borderBottom": "1px solid #ddd",
              }
            }
          >
            <ListLink
              activeClassName="active"
              index={true}
              isActive={[Function]}
              to="/org-slug/project-slug/settings/environments/"
            >
              Environments
            </ListLink>
            <ListLink
              activeClassName="active"
              index={true}
              isActive={[Function]}
              to="/org-slug/project-slug/settings/environments/hidden/"
            >
              Hidden
            </ListLink>
          </ul>
        }
      >
        <div
          className="glamor-4 glamor-5"
        >
          <Flex
            align="center"
          >
            <Base
              align="center"
              className="glamor-2"
            >
              <div
                className="glamor-2"
                is={null}
              >
                <Title>
                  <div
                    className="glamor-0 glamor-1"
                  >
                    Manage Environments
                  </div>
                </Title>
              </div>
            </Base>
          </Flex>
          <div>
            <ul
              className="nav nav-tabs"
              style={
                Object {
                  "borderBottom": "1px solid #ddd",
                }
              }
            >
              <ListLink
                activeClassName="active"
                index={true}
                isActive={[Function]}
                to="/org-slug/project-slug/settings/environments/"
              >
                <li
                  className=""
                >
                  <Link
                    onlyActiveOnIndex={true}
                    style={Object {}}
                    to="/org-slug/project-slug/settings/environments/"
                  >
                    <a
                      onClick={[Function]}
                      style={Object {}}
                    >
                      Environments
                    </a>
                  </Link>
                </li>
              </ListLink>
              <ListLink
                activeClassName="active"
                index={true}
                isActive={[Function]}
                to="/org-slug/project-slug/settings/environments/hidden/"
              >
                <li
                  className="active"
                >
                  <Link
                    onlyActiveOnIndex={true}
                    style={Object {}}
                    to="/org-slug/project-slug/settings/environments/hidden/"
                  >
                    <a
                      onClick={[Function]}
                      style={Object {}}
                    >
                      Hidden
                    </a>
                  </Link>
                </li>
              </ListLink>
            </ul>
          </div>
        </div>
      </Wrapper>
    </SettingsPageHeading>
    <Panel>
      <StyledPanel>
        <div
          className="glamor-16 glamor-17"
        >
          <PanelHeader>
            <StyledPanelHeader>
              <Component
                className="glamor-10 glamor-6"
              >
                <Flex
                  align="center"
                  className="glamor-10 glamor-6"
                  justify="space-between"
                >
                  <Base
                    align="center"
                    className="glamor-6 glamor-7"
                    justify="space-between"
                  >
                    <div
                      className="glamor-6 glamor-7"
                      is={null}
                    >
                      Hidden
                    </div>
                  </Base>
                </Flex>
              </Component>
            </StyledPanelHeader>
          </PanelHeader>
          <PanelBody
            direction="column"
            disablePadding={true}
            flex={false}
          >
            <div
              className=""
            >
              <EmptyMessage>
                <Wrapper>
                  <div
                    className="glamor-14 glamor-15"
                  >
                    <div
                      className="ref-message"
                    >
                      You don't have any hidden environments.
                    </div>
                  </div>
                </Wrapper>
              </EmptyMessage>
            </div>
          </PanelBody>
        </div>
      </StyledPanel>
    </Panel>
  </div>
</ProjectEnvironments>
`;

exports[`ProjectEnvironments render hidden renders environment list 1`] = `
.glamor-4 {
  font-size: 14px;
  box-shadow: inset 0 -1px 0 #E2DBE8;
  margin: -20px 0 30px;
}

.glamor-2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.glamor-0 {
  font-size: 20px;
  font-weight: bold;
  margin: 20px 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.glamor-26 {
  background: #fff;
  border-radius: 4px;
  border: 1px solid #D1CAD8;
  box-shadow: 0 2px 0 rgba(37,11,54,0.04);
  margin-bottom: 32px;
  position: relative;
}

.glamor-10 {
  color: #645574;
  font-size: 13px;
  font-weight: 600;
  text-transform: uppercase;
  border-bottom: 1px solid #D1CAD8;
  border-radius: 4px 4px 0 0;
  background: #FAF9FB;
  line-height: 1;
  padding: 15px 20px;
}

.glamor-7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  color: #645574;
  font-size: 13px;
  font-weight: 600;
  text-transform: uppercase;
  border-bottom: 1px solid #D1CAD8;
  border-radius: 4px 4px 0 0;
  background: #FAF9FB;
  line-height: 1;
  padding: 15px 20px;
}

.glamor-22 {
  box-sizing: border-box;
  padding: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-bottom: 1px solid #E2DBE8;
}

.glamor-22:last-child {
  border: 0;
}

.glamor-18 {
  margin-left: 4px;
}

<ProjectEnvironments
  params={
    Object {
      "orgId": "org-slug",
      "projectId": "project-slug",
    }
  }
  route={
    Object {
      "path": "environments/hidden/",
    }
  }
  routes={Array []}
>
  <div>
    <SettingsPageHeading
      tabs={
        <ul
          className="nav nav-tabs"
          style={
            Object {
              "borderBottom": "1px solid #ddd",
            }
          }
        >
          <ListLink
            activeClassName="active"
            index={true}
            isActive={[Function]}
            to="/org-slug/project-slug/settings/environments/"
          >
            Environments
          </ListLink>
          <ListLink
            activeClassName="active"
            index={true}
            isActive={[Function]}
            to="/org-slug/project-slug/settings/environments/hidden/"
          >
            Hidden
          </ListLink>
        </ul>
      }
      title="Manage Environments"
    >
      <Wrapper
        tabs={
          <ul
            className="nav nav-tabs"
            style={
              Object {
                "borderBottom": "1px solid #ddd",
              }
            }
          >
            <ListLink
              activeClassName="active"
              index={true}
              isActive={[Function]}
              to="/org-slug/project-slug/settings/environments/"
            >
              Environments
            </ListLink>
            <ListLink
              activeClassName="active"
              index={true}
              isActive={[Function]}
              to="/org-slug/project-slug/settings/environments/hidden/"
            >
              Hidden
            </ListLink>
          </ul>
        }
      >
        <div
          className="glamor-4 glamor-5"
        >
          <Flex
            align="center"
          >
            <Base
              align="center"
              className="glamor-2"
            >
              <div
                className="glamor-2"
                is={null}
              >
                <Title>
                  <div
                    className="glamor-0 glamor-1"
                  >
                    Manage Environments
                  </div>
                </Title>
              </div>
            </Base>
          </Flex>
          <div>
            <ul
              className="nav nav-tabs"
              style={
                Object {
                  "borderBottom": "1px solid #ddd",
                }
              }
            >
              <ListLink
                activeClassName="active"
                index={true}
                isActive={[Function]}
                to="/org-slug/project-slug/settings/environments/"
              >
                <li
                  className=""
                >
                  <Link
                    onlyActiveOnIndex={true}
                    style={Object {}}
                    to="/org-slug/project-slug/settings/environments/"
                  >
                    <a
                      onClick={[Function]}
                      style={Object {}}
                    >
                      Environments
                    </a>
                  </Link>
                </li>
              </ListLink>
              <ListLink
                activeClassName="active"
                index={true}
                isActive={[Function]}
                to="/org-slug/project-slug/settings/environments/hidden/"
              >
                <li
                  className="active"
                >
                  <Link
                    onlyActiveOnIndex={true}
                    style={Object {}}
                    to="/org-slug/project-slug/settings/environments/hidden/"
                  >
                    <a
                      onClick={[Function]}
                      style={Object {}}
                    >
                      Hidden
                    </a>
                  </Link>
                </li>
              </ListLink>
            </ul>
          </div>
        </div>
      </Wrapper>
    </SettingsPageHeading>
    <Panel>
      <StyledPanel>
        <div
          className="glamor-26 glamor-27"
        >
          <PanelHeader>
            <StyledPanelHeader>
              <Component
                className="glamor-10 glamor-6"
              >
                <Flex
                  align="center"
                  className="glamor-10 glamor-6"
                  justify="space-between"
                >
                  <Base
                    align="center"
                    className="glamor-6 glamor-7"
                    justify="space-between"
                  >
                    <div
                      className="glamor-6 glamor-7"
                      is={null}
                    >
                      Hidden
                    </div>
                  </Base>
                </Flex>
              </Component>
            </StyledPanelHeader>
          </PanelHeader>
          <PanelBody
            direction="column"
            disablePadding={true}
            flex={false}
          >
            <div
              className=""
            >
              <PanelItem
                align="center"
                justify="space-between"
                key="1"
                p={2}
              >
                <StyledPanelItem
                  align="center"
                  justify="space-between"
                  p={2}
                >
                  <Base
                    align="center"
                    className="glamor-22 glamor-23"
                    justify="space-between"
                    p={2}
                  >
                    <div
                      className="glamor-22 glamor-23"
                      is={null}
                    >
                      <Flex
                        align="center"
                      >
                        <Base
                          align="center"
                          className="glamor-2"
                        >
                          <div
                            className="glamor-2"
                            is={null}
                          >
                            Zzz
                             
                            <code>
                              zzz
                            </code>
                          </div>
                        </Base>
                      </Flex>
                      <div>
                        <EnvironmentButton
                          onClick={[Function]}
                          size="xsmall"
                        >
                          <Button
                            className="glamor-18 glamor-19"
                            disabled={false}
                            onClick={[Function]}
                            size="xsmall"
                          >
                            <button
                              className="glamor-18 glamor-19 button button-default button-xs"
                              disabled={false}
                              onClick={[Function]}
                              role="button"
                            >
                              <Flex
                                align="center"
                                className="button-label"
                              >
                                <Base
                                  align="center"
                                  className="button-label glamor-2"
                                >
                                  <div
                                    className="button-label glamor-2"
                                    is={null}
                                  >
                                    Show
                                  </div>
                                </Base>
                              </Flex>
                            </button>
                          </Button>
                        </EnvironmentButton>
                      </div>
                    </div>
                  </Base>
                </StyledPanelItem>
              </PanelItem>
            </div>
          </PanelBody>
        </div>
      </StyledPanel>
    </Panel>
  </div>
</ProjectEnvironments>
`;
